<?xml version="1.0"?>
<package>
  <name>planning_server</name>
  <version>0.0.0</version>
  <description>The planning_server package</description>

  <maintainer email="burgetf@informatik.uni-freiburg.de">Felix Burget</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>birrt_star_algorithm</build_depend>
  <build_depend>planner_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rrt_star_algorithm</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--<build_depend>planning_world_builder</build_depend>-->
  <!--<build_depend>motion_trajectory_execution</build_depend> -->
  <build_depend>eigen_conversions</build_depend>

  

  <run_depend>birrt_star_algorithm</run_depend>
  <run_depend>planner_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rrt_star_algorithm</run_depend>
  <run_depend>std_msgs</run_depend>
  <!--<run_depend>planning_world_builder</run_depend>-->
  <!-- <run_depend>motion_trajectory_execution</run_depend> -->
  <run_depend>eigen_conversions</run_depend>

</package>
